--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <!-- link css -->
     <link rel="stylesheet" href="css/style.css">
     <!-- link bootstrap 5.x -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <script src="https://kit.fontawesome.com/a7187feedf.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -29,7 +30,9 @@
         <nav id="navscroll" class="navbar navbar-expand-lg navbar-dark scrolling-nvbar fixed-top ">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"> <img src="/image/logo/reftel_blanco.png" alt="logo" width=10%></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -77,7 +80,9 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Intercomunicadores</h5>
-                                <p class="card-text">Equipos totalmente adaptados para usarse en ambiente ruidoso, interior y exterior: estadio, gimnasios y cualquier tipo de contexto en donde pueda desarrollarse un deporte.</p>
+                                <p class="card-text">Equipos totalmente adaptados para usarse en ambiente ruidoso,
+                                    interior y exterior: estadio, gimnasios y cualquier tipo de contexto en donde pueda
+                                    desarrollarse un deporte.</p>
                                 <button class="btn btn-dark">Ver Mas</button>
                             </div>
                         </div>
@@ -91,7 +96,9 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">VAR</h5>
-                                <p class="card-text">Nuestra herramienta es la más flexible del mercado, se adapta a la necesidad de nuestros clientes. Buscamos el equilibrio entre la potencia, la confiabilidad y el costo.</p>
+                                <p class="card-text">Nuestra herramienta es la más flexible del mercado, se adapta a la
+                                    necesidad de nuestros clientes. Buscamos el equilibrio entre la potencia, la
+                                    confiabilidad y el costo.</p>
                                 <button class="btn btn-dark">Ver Mas</button>
                             </div>
                         </div>
@@ -124,7 +131,8 @@
                     </div>
                     <div class="col-4 tamanioCaract">
                         <i class="fa fa-cloud" aria-hidden="true"></i>
-                        <p>Analizamos cada caso y construimos una representacion de una o varias ideas para poder mostrar</p>
+                        <p>Analizamos cada caso y construimos una representacion de una o varias ideas para poder
+                            mostrar</p>
                     </div>
                     <div class="col-4 tamanioCaract">
                         <i class="fa fa-chart-line" aria-hidden="true"></i>
@@ -174,7 +182,8 @@
                 <div>
 
                     <div class="form-div">
-                        <form class="my-form col-md-8 col-lg-6 col-sm-10 col-sx-12 w-100" id="formularioContacto" action="https://formspree.io/f/moqybkle" method="POST">
+                        <form class="my-form col-md-8 col-lg-6 col-sm-10 col-sx-12 w-100" id="formularioContacto"
+                            action="https://formspree.io/f/moqybkle" method="POST">
                             <div class="form-group">
                                 <label for="Nombre"></label>
                                 <input id="nombre" type="text" class="form-control" placeholder="Nombre">
@@ -185,10 +194,12 @@
                             </div>
                             <div class="form-group w-75">
                                 <label for="message" class="formu"></label>
-                                <textarea id="message" name="message" id="message" class="tamanioMensaje" cols="30" rows="10" placeholder="Mensaje"></textarea>
+                                <textarea id="message" name="message" id="message" class="tamanioMensaje" cols="30"
+                                    rows="10" placeholder="Mensaje"></textarea>
                             </div>
                             <div class="div-botonFormContactoSmart">
-                                <button id="btnCrearSuscriptor" type="submit" class="button-form btn-block btn-dark btn-sm ">Enviar</button>
+                                <button id="btnCrearSuscriptor" type="submit"
+                                    class="button-form btn-block btn-dark btn-sm ">Enviar</button>
                             </div>
                         </form>
                     </div>
@@ -202,8 +213,10 @@
                         <p><i class="fa fa-map-marker"></i>Basavilbaso 1378 6to, C1006AAD, CABA.</p>
                     </div>
                     <div>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.469669184745!2d-58.37912968517689!3d-34.592283264399335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccab4191a5f89%3A0xb1a318fabf6737d!2sBasavilbaso%201378%2C%20C1006%20CABA!5e0!3m2!1ses!2sar!4v1637859944829!5m2!1ses!2sar"
-                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="mapa"></iframe>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.469669184745!2d-58.37912968517689!3d-34.592283264399335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccab4191a5f89%3A0xb1a318fabf6737d!2sBasavilbaso%201378%2C%20C1006%20CABA!5e0!3m2!1ses!2sar!4v1637859944829!5m2!1ses!2sar"
+                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                            class="mapa"></iframe>
 
                     </div>
                 </div>
@@ -226,9 +239,12 @@
         </div>
     </footer>
     <!-- Js Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- mi JS -->
     <script src="app.js"></script>
 </body>
