--- a/html/productos.html
+++ b/html/productos.html
@@ -2,123 +2,169 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reftel</title>
-  <!-- Fuentes -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
-  <!-- link css -->
-  <link rel="stylesheet" href="../css/style.css">
-  <!-- link bootstrap 5.x -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reftel</title>
+    <!-- Fuentes -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
+    <!-- link css -->
+    <link rel="stylesheet" href="../css/style.css">
+    <!-- link bootstrap 5.x -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-  <script src="https://kit.fontawesome.com/a7187feedf.js" crossorigin="anonymous"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/a7187feedf.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
-  <header>
-    <!-- Navbar -->
-    <nav id="navscroll" class="navbar navbar-expand-lg navbar-dark scrolling-nvbar fixed-top ">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"> <img src="../image/logo/reftel_blanco.png" alt="logo"
-            width=10%></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
-          aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <header>
+        <!-- Navbar -->
+        <nav id="navscroll" class="navbar navbar-expand-lg navbar-dark scrolling-nvbar fixed-top ">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html"> <img src="../image/logo/reftel_blanco.png" alt="logo" width=10%></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav ml-auto mb-2 mb-lg-0 mx-auto ">
-            <li class="nav-item">
-              <a class="nav-link" href="./html/productos.html">Productos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./nosotros.html">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#contacto">Contacto</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav ml-auto mb-2 mb-lg-0 mx-auto ">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="./nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="../index.html#contacto">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 
-  <main>
+    <main>
 
-    <!-- seccion portada -->
+        <!-- seccion portada -->
 
-    <section>
-      <div class="img-portada-productos">
-      </div>
+        <section>
+            <div class="img-portada-productos">
+            </div>
 
-      <div class="container-nosotros">
-        <div class="texto_nosotros">
-          <h1>Productos</h1>
+            <div class="container-nosotros">
+                <div class="titulo_productos">
+                    <h1>Productos</h1>
 
-        </div>
-      </div>
-    </section>>
+                </div>
+            </div>
+        </section>
 
-    <!-- intercomunicadores -->
+        <!-- intercomunicadores -->
+        <section id="intercomunicadores">
+            <h2 class="titulo-intercomunicador">Intercomunicadores</h2>
+            <div class="productos-ubicacion">
+                <div class="tamanio-textoIntercomunicador">
+                    <p>La velocidad con la que suceden las acciones en el mundo del deporte les exige a los protagonistas una gran capacidad de reacción para no cometer errores y ayudar a la dinámica del juego. Por eso, es fundamental una <b>comunicación profesional y de alta calidad</b>.
+                        <br>
+                        <br> Nuestros equipos están totalmente adaptados al uso en ambiente ruidoso, interior y exterior: estadios, gimnasios, pabellones, pistas de hielo y cualquier otro tipo de contexto en donde pueda desarrollarse un deporte. <br>                        <br> El <b>sistema full-duplex</b> permite que los intérpretes estén constantemente comunicados, sin necesidad de que manipulen los equipos y de esta manera solo tengan que concentrarse en su rendimiento deportivo.
+                    </p>
+                </div>
+                <div>
+                    <img src="../image/intercomunicador1.png" alt="Intercomunicador" width=372px>
+                </div>
+            </div>
+        </section>
 
-    <div>
+        <!-- Cards Productos -->
+        <section>
+            <h2 class="nuestra-historia">Producto de alta calidad</h2>
+            <div class="container">
+                <div class="row productos-card">
+                    <div class="col-6">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row g-0">
+                                <div class="col-md-2">
+                                    <img src="..." class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-10">
+                                    <div class="card-body inicio">
+                                        <h5 class="titulo-cardProductos">Audio de alta resolución</h5>
+                                        <p class="texto-cardProductos">HD Broadcast 16 kHz - Filtrado de ruidos - Posibilidad de ajustar el nivel del sonido del silbato</p>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card mb-3 " style="max-width: 540px; ">
+                            <div class="row g-0 ">
+                                <div class="col-md-2 ">
+                                    <img src="... " class="img-fluid rounded-start " alt="... ">
+                                </div>
+                                <div class="col-md-10 ">
+                                    <div class="card-body inicio">
+                                        <h5 class="titulo-cardProductos">Sistema robusto</h5>
+                                        <p class="texto-cardProductos ">Grabador integrado para guardar conversaciones en tarjeta SD - Pasarela de audio compatible con cualquier equipo de Var - Enlace de radio aún más robusto entre el árbitro de campo y los árbitros del Var /p>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 ">
+                        <div class="card mb-3 " style="max-width: 540px; ">
+                            <div class="row g-0 ">
+                                <div class="col-md-2">
+                                    <img src="... " class="img-fluid rounded-start " alt="... ">
+                                </div>
+                                <div class="col-md-10">
+                                    <div class="card-body inicio ">
+                                        <h5 class="titulo-cardProductos ">Facilidad de uso</h5>
+                                        <p class="texto-cardProductos ">Sencillo de desplegar: no necesita una estación de base - Cuenta con una pantalla tactil para una configuración más intuitiva - Sistema Plug and Play - Número ilimitado de usuarios - Terminales pequeños y ligeros
+                                            - Alertas de síntesis de voz</p>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card mb-3 " style="max-width: 540px; ">
+                            <div class="row g-0 ">
+                                <div class="col-md-2">
+                                    <img src="... " class="img-fluid rounded-start " alt="... ">
+                                </div>
+                                <div class="col-md-10">
+                                    <div class="card-body inicio ">
+                                        <h5 class="titulo-cardProductos ">Seguridad</h5>
+                                        <p class="texto-cardProductos ">Sin riesgo a la desconexión accidental de auriculares - Mayor resistencia a las interferencias de radio - Comunicaciones encriptadas</p>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Footer -->
 
-      <h2 class="nuestra-historia">Intercomunicadores</h2>
-      <br>
-      <br>
-
-      <p class="texto-nosotros">La velocidad con la que suceden las acciones en el mundo del deporte les exige a los
-        protagonistas una gran capacidad de reacción para no cometer errores y ayudar a la dinámica del juego.
-        Por eso, es fundamental una <b>comunicación profesional y de alta calidad</b>.
-
-        Nuestros equipos están totalmente adaptados al uso en ambiente ruidoso, interior y exterior: estadios,
-        gimnasios,
-        pabellones, pistas de hielo y cualquier otro tipo de contexto en donde pueda desarrollarse un deporte.
-
-        El <b>sistema full-duplex</b> permite que los intérpretes estén constantemente comunicados, sin necesidad de que
-        manipulen los equipos y de esta manera solo tengan que concentrarse en su rendimiento deportivo.
-
-      </p>
-      <br>
-
-      <img src="../image/intercomunicador.png" alt="Intercomunicador">
-
-
-    </div>
-
-
-    <!-- Cards Productos -->
-
-    <h2 class="nuestra-historia">Producto de alta calidad</h2>
-
-
-    <!-- Footer -->
-
-    <footer class="container-fluid cajaFooter">
-      <div class="centrar">
-        <img src="../image/logo/reftel_blanco.png" alt="logofooter" width="10%">
-        <p>+54 9 11 67805747</p>
-        <p>Basavilbaso 1378, CABA</p>
-      </div>
-    </footer>
-    <!-- Js Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"></script>
-    <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <!-- mi JS -->
-    <script src="../app.js"></script>
+        <footer class="container-fluid cajaFooter ">
+            <div class="centrar ">
+                <img src="../image/logo_Reftel.jpeg " alt="logofooter " width="10% ">
+                <p>+54 9 11 67805747</p>
+                <p>Basavilbaso 1378, CABA</p>
+            </div>
+        </footer>
+        <!-- Js Bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js " integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p " crossorigin="anonymous "></script>
+        <!-- JQuery -->
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js " integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin=" anonymous "></script>
+        <!-- mi JS -->
+        <script src="../app.js "></script>
 </body>
 
 </html>
